Added logic for secrets

--- a/House Prices - Advanced Regression Techniques/solution.ipynb
+++ b/House Prices - Advanced Regression Techniques/solution.ipynb
@@ -6,7 +6,35 @@
    "id": "086c3591-ccf4-43e0-a4c9-ed6cb7e3a2c1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "\n",
+    "try:\n",
+    "    from google.colab import drive, userdata\n",
+    "    drive.mount('/content/drive')\n",
+    "\n",
+    "    IN_COLAB = True\n",
+    "    DATA_PATH = '/content/drive/My Drive/Datasets/House Prices - Advanced Regression Techniques'\n",
+    "    KAGGLE_USERNAME = userdata.get('KAGGLE_USERNAME')\n",
+    "    KAGGLE_KEY = userdata.get('KAGGLE_KEY')\n",
+    "    print(KAGGLE_KEY)\n",
+    "except:\n",
+    "    IN_COLAB = False\n",
+    "    DATA_PATH = './data'\n",
+    "    KAGGLE_USERNAME = os.environ['KAGGLE_USERNAME']\n",
+    "    KAGGLE_KEY = os.environ['KAGGLE_KEY']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9090c0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not os.path.exists(DATA_PATH):\n",
+    "    os.mkdir(DATA_PATH)\n"
+   ]
   }
  ],
  "metadata": {
