--- a/House Prices - Advanced Regression Techniques/solution.ipynb
+++ b/House Prices - Advanced Regression Techniques/solution.ipynb
@@ -5,41 +5,88 @@
    "execution_count": null,
    "id": "086c3591-ccf4-43e0-a4c9-ed6cb7e3a2c1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading house-prices-advanced-regression-techniques.zip to ./data\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 199k/199k [00:00<00:00, 678kB/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Extracting files for house-prices-advanced-regression-techniques.zip\n",
+      "Extraction done for house-prices-advanced-regression-techniques.zip, deleting...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "import os\n",
+    "def get_dataset():\n",
+    "    import os\n",
+    "    import kaggle as kg\n",
+    "    import shutil\n",
     "\n",
-    "try:\n",
-    "    from google.colab import drive, userdata\n",
-    "    drive.mount('/content/drive')\n",
+    "    try:\n",
+    "        from google.colab import drive, userdata\n",
+    "        drive.mount('/content/drive')\n",
     "\n",
-    "    IN_COLAB = True\n",
-    "    DATA_PATH = '/content/drive/My Drive/Datasets/House Prices - Advanced Regression Techniques'\n",
-    "    KAGGLE_USERNAME = userdata.get('KAGGLE_USERNAME')\n",
-    "    KAGGLE_KEY = userdata.get('KAGGLE_KEY')\n",
-    "    print(KAGGLE_KEY)\n",
-    "except:\n",
-    "    IN_COLAB = False\n",
-    "    DATA_PATH = './data'\n",
-    "    KAGGLE_USERNAME = os.environ['KAGGLE_USERNAME']\n",
-    "    KAGGLE_KEY = os.environ['KAGGLE_KEY']"
+    "        IN_COLAB = True\n",
+    "        DATA_PATH = '/content/drive/My Drive/Datasets/House Prices - Advanced Regression Techniques'\n",
+    "        os.environ['KAGGLE_USERNAME'] = userdata.get('KAGGLE_USERNAME')\n",
+    "        os.environ['KAGGLE_KEY'] = userdata.get('KAGGLE_KEY')\n",
+    "    except:\n",
+    "        import dotenv\n",
+    "        IN_COLAB = False\n",
+    "        DATA_PATH = './data'\n",
+    "        dotenv.load_dotenv('../.env')\n",
+    "\n",
+    "    if os.path.exists(DATA_PATH):\n",
+    "        shutil.rmtree(DATA_PATH)\n",
+    "\n",
+    "    kg.api.authenticate()\n",
+    "\n",
+    "    if not os.path.exists(DATA_PATH):\n",
+    "        os.mkdir(DATA_PATH)\n",
+    "\n",
+    "    import zipfile\n",
+    "    kg.api.competition_download_files(competition='house-prices-advanced-regression-techniques', path=DATA_PATH, quiet=False)\n",
+    "    for file in os.listdir(DATA_PATH):\n",
+    "        print(f\"Extracting files for {file}\")\n",
+    "        with zipfile.ZipFile(f'{DATA_PATH}/{file}', 'r') as z:\n",
+    "            z.extractall(DATA_PATH)\n",
+    "        os.remove(f'{DATA_PATH}/{file}')\n",
+    "        print(f\"Extraction done for {file}, deleting...\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9090c0d",
+   "id": "ef0da25b",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "if not os.path.exists(DATA_PATH):\n",
-    "    os.mkdir(DATA_PATH)\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
