Minor fix for API token

--- a/House Prices - Advanced Regression Techniques/solution.ipynb
+++ b/House Prices - Advanced Regression Techniques/solution.ipynb
@@ -17,7 +17,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 199k/199k [00:00<00:00, 678kB/s]"
+      "100%|██████████| 199k/199k [00:00<00:00, 351kB/s]"
      ]
     },
     {
@@ -49,8 +49,7 @@
     "\n",
     "        IN_COLAB = True\n",
     "        DATA_PATH = '/content/drive/My Drive/Datasets/House Prices - Advanced Regression Techniques'\n",
-    "        os.environ['KAGGLE_USERNAME'] = userdata.get('KAGGLE_USERNAME')\n",
-    "        os.environ['KAGGLE_KEY'] = userdata.get('KAGGLE_KEY')\n",
+    "        os.environ['KAGGLE_API_TOKEN'] = userdata.get('KAGGLE_API_TOKEN')\n",
     "    except:\n",
     "        import dotenv\n",
     "        IN_COLAB = False\n",
@@ -72,7 +71,8 @@
     "        with zipfile.ZipFile(f'{DATA_PATH}/{file}', 'r') as z:\n",
     "            z.extractall(DATA_PATH)\n",
     "        os.remove(f'{DATA_PATH}/{file}')\n",
-    "        print(f\"Extraction done for {file}, deleting...\")\n"
+    "        print(f\"Extraction done for {file}, deleting...\")\n",
+    "\n"
    ]
   },
   {
