--- a/House Prices - Advanced Regression Techniques/solution.ipynb
+++ b/House Prices - Advanced Regression Techniques/solution.ipynb
@@ -10,55 +10,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading house-prices-advanced-regression-techniques.zip to ./data\n"
+      "/content/drive/My Drive/Datasets/House Prices - Advanced Regression Techniques\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 199k/199k [00:00<00:00, 351kB/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Extracting files for house-prices-advanced-regression-techniques.zip\n",
-      "Extraction done for house-prices-advanced-regression-techniques.zip, deleting...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+     "ename": "KeyError",
+     "evalue": "'KAGGLE_API_TOKEN'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipython-input-699326419.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m \u001b[0mget_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/tmp/ipython-input-699326419.py\u001b[0m in \u001b[0;36mget_dataset\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0mshutil\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrmtree\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDATA_PATH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menviron\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'KAGGLE_API_TOKEN'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m     \u001b[0;32mimport\u001b[0m \u001b[0mkaggle\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mkg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0mkg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mauthenticate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/lib/python3.12/os.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'KAGGLE_API_TOKEN'"
      ]
     }
    ],
    "source": [
     "def get_dataset():\n",
     "    import os\n",
-    "    import kaggle as kg\n",
     "    import shutil\n",
     "\n",
     "    try:\n",
-    "        from google.colab import drive, userdata\n",
-    "        drive.mount('/content/drive')\n",
-    "\n",
-    "        IN_COLAB = True\n",
     "        DATA_PATH = '/content/drive/My Drive/Datasets/House Prices - Advanced Regression Techniques'\n",
+    "        print(DATA_PATH)\n",
+    "        from google.colab import drive, userdata\n",
     "        os.environ['KAGGLE_API_TOKEN'] = userdata.get('KAGGLE_API_TOKEN')\n",
-    "    except:\n",
+    "        print(userdata.get('KAGGLE_API_TOKEN'))\n",
+    "        drive.mount('/content/drive')\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
     "        import dotenv\n",
-    "        IN_COLAB = False\n",
     "        DATA_PATH = './data'\n",
     "        dotenv.load_dotenv('../.env')\n",
     "\n",
     "    if os.path.exists(DATA_PATH):\n",
     "        shutil.rmtree(DATA_PATH)\n",
     "\n",
+    "    print(os.environ['KAGGLE_API_TOKEN'])\n",
+    "    import kaggle as kg\n",
     "    kg.api.authenticate()\n",
     "\n",
     "    if not os.path.exists(DATA_PATH):\n",
@@ -72,7 +63,9 @@
     "            z.extractall(DATA_PATH)\n",
     "        os.remove(f'{DATA_PATH}/{file}')\n",
     "        print(f\"Extraction done for {file}, deleting...\")\n",
-    "\n"
+    "\n",
+    "\n",
+    "get_dataset()"
    ]
   },
   {
@@ -86,7 +79,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -100,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
